--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <title>GifVault</title>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav class= "navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <%= link_to 'UrineLuck', '#', class: 'navbar-brand' %>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          
+          <% if !logged_in? %>
+            <li><%= link_to 'Login in', login_path %></li>
+            <li><%= link_to 'Sign Up', '/signup' %></li>
+          <% else %>
+            <li><%= link_to 'Home', home_path %></li>
+            <li><%= link_to 'Profile', profile_path %></li>
+            <li><%= link_to 'Log out', logout_path %></li>
+            <% end %>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+<% if current_user %>
+  Signed in as <%= current_user.name %> 
+<% end %>
 
+
+
+
+<%= render partial: "shared/flash_messages", flash: flash %> 
 <%= yield %>
 
 </body>
