--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
           <% else %>
             <li><%= link_to 'Home', home_path %></li>
             <li><%= link_to 'Profile', profile_path %></li>
+            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
             <li><%= link_to 'Log out', logout_path, method: :delete %></li>
             <% end %>
         </ul>
