--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,10 +7,10 @@
         <ul class="nav navbar-nav navbar-right">
           
           <% if !logged_in? %>
-            <li><%= link_to 'Login in', login_path %></li>
-            <li><%= link_to 'Sign Up', '/signup' %></li>
+            <li><%= link_to 'Log In', login_path %></li>
+            <li><%= link_to 'Sign Up', signup_path %></li>
           <% else %>
-            <li><%= link_to 'Home', home_path %></li>
+            <li><%= link_to 'Home', users_path %></li>
             <li><%= link_to 'Profile', profile_path %></li>
             <li><%= link_to "Settings", edit_user_path(current_user) %></li>
             <li><%= link_to 'Log out', logout_path, method: :delete %></li>
