heroku works pleasegit add .!

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
       <%= yield %>
+      <img src="urinelucklogo.png" alt="urinelucklogo" height="500" width="500"> 
       <%= render 'layouts/footer' %>
 
     </div>
