--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,13 +5,19 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          
+
           <% if !logged_in? %>
             <li><%= link_to 'Log In', login_path %></li>
             <li><%= link_to 'Sign Up', signup_path %></li>
+
+            <li><%= link_to 'Map', showmap_path %></li>
+
           <% else %>
             <li><%= link_to 'Home', users_path %></li>
             <li><%= link_to 'Profile', profile_path %></li>
+
+            <li><%= link_to 'Map', showmap_path %></li>
+
             <li><%= link_to "Settings", edit_user_path(current_user) %></li>
             <li><%= link_to 'Log out', logout_path, method: :delete %></li>
             <% end %>
@@ -19,5 +25,3 @@
       </div>
     </div>
   </nav>
-
-
