--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html style="width:100%;height:100%;">
 <head>
   <title>UrineTrouble</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+
 </head>
-<body>
+<body style="	width:100%;height:100%;  ">
+
     <%= render 'layouts/header' %>
-    <div class="container">
+    <div class="holdme">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
       <%= yield %>
-      <img src="urinelucklogo.png" alt="urinelucklogo" height="500" width="500"> 
+      <img src="urinelucklogo.png" alt="urinelucklogo" height="500" width="500">
       <%= render 'layouts/footer' %>
 
     </div>
