--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,23 @@
 <body style="	width:100%;height:100%;  ">
 
     <%= render 'layouts/header' %>
-    <div class="holdme">
-      <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
+    <!--<div class="holdme">-->
+    <% if user_signed_in? %>
+      
+      <p>Hello, <%= current_user.name %> - <%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
+      <br>
+    
+    <% end %>
+      
+
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
       <%= yield %>
-      <img src="urinelucklogo.png" alt="urinelucklogo" height="500" width="500">
+      <!--<img src="urinelucklogo.png" alt="urinelucklogo" height="500" width="500">-->
       <%= render 'layouts/footer' %>
 
-    </div>
+    <!--</div>-->
   </body>
 </html>
