changes with adding bathrooms and addition of country gems

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
           <% else %>
             <li><%= link_to 'Home', home_path %></li>
             <li><%= link_to 'Profile', profile_path %></li>
-
+            <li><%= link_to 'Add a Bathroom', newbath_path %></li>
             <li><%= link_to 'Map', showmap_path %></li>
 
             <li><%= link_to "Settings", edit_user_registration_path %></li>
