tried to make it so admin can view all bathrooms and has the ability to delete bathrooms, still some bugs tho

--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-6 col md-offset-3">
             
-            <% for bath in  @baths do%>
+            <% @bath.each do |bath| %>
                     <table class="table">
                         <tr>
                             <th><b>Address</b></th>
