added geo location to bathroom addresses so longitude and latitude can be used to find certain locations on the map

--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -47,6 +47,16 @@
                             <th><b>Rating</b></th>
                             <td><b><%= bath.rating %></b></td>
                         </tr>
+                        
+                        <tr>
+                            <th><b>Longitude</b></th>
+                            <td><b><%= bath.longitude %></b></td>
+                        </tr>
+                        
+                        <tr>
+                            <th><b>Latitude</b></th>
+                            <td><b><%= bath.latitude %></b></td>
+                        </tr>
     
                     
                         <tr>
