user being able to add and view bathrooms bug resolved

--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-6 col md-offset-3">
             
-            <% @bath.each do |bath| %>
+            <% @baths.each do |bath| %>
                     <table class="table">
                         <tr>
                             <th><b>Address</b></th>
