took out hours cause its kinda useless

--- a/app/views/baths/new.html.erb
+++ b/app/views/baths/new.html.erb
@@ -27,10 +27,10 @@
         <%= f.text_field :address, autofocus: true %>
     </div>
     
-    <div class="field">
-        <%= f.label :hours %><br />
-        <%= f.time_field :hours, autofocus: true %>
-    </div>
+    <!--<div class="field">-->
+    <!--    <%= f.label :hours %><br />-->
+    <!--    <%= f.time_field :hours, autofocus: true %>-->
+    <!--</div>-->
 
     <div class="field">
         <%= f.label :rating %><br />
