--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
     <h1>Welcome!</h1>
-    <p>The web app built for enhancing your bathroom experince</p>
+    <p>The web app built for Bathroom Connoisseurs</p>
 </div>
