--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,7 @@
     color: #F8F8F8;
   font-size: 95%;
   font-style: italic;
+  background-color: #202020;
 }
 
 
@@ -56,6 +57,7 @@
 .myNavElementsLeft a:hover:not(.active) {
     color: #F8F8F8;
     font-size: 125%;
+    background-color: #202020;
 }
 
 
@@ -73,12 +75,13 @@
 }
 .myNavElementsRight a:hover:not(.active) {
     color: #505050;
+    background-color: #202020;
 }
 
 
 .myNav{
   list-style-type: none;
-  padding: 15px 0px 30px 0px;
+  padding: 15px 0px 35px 0px;
   margin: 0px 0px 0px 0px;
   background-color: #202020;
   width: 100%;
