--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,9 +1,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+/*
 body {
     padding-top: 70px;
 }
+*/
 
 @mixin box_sizing {
   -moz-box-sizing:    border-box;
@@ -17,7 +19,9 @@ body {
   clear: both;
   float: left;
   width: 100%;
+
   margin-top: 45px;
+
   @include box_sizing;
 }
 
@@ -25,7 +29,9 @@ body {
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
+  /*
   margin-bottom: 15px;
+  */
   @include box_sizing;
 }
 
