--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,3 +2,11 @@
     <h1>Welcome!</h1>
     <p>The web app built for Bathroom Connoisseurs</p>
 </div>
+
+<ul id="slides">
+	<li class="slide showing">Slide 1</li>
+	<li class="slide">Slide 2</li>
+	<li class="slide">Slide 3</li>
+	<li class="slide">Slide 4</li>
+	<li class="slide">Slide 5</li>
+</ul>
