--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -10,3 +10,15 @@
 	<li class="slide">Slide 4</li>
 	<li class="slide">Slide 5</li>
 </ul>
+
+<script>
+var slides = document.querySelectorAll('#slides .slide');
+var currentSlide = 0;
+var slideInterval = setInterval(nextSlide,2000);
+
+function nextSlide(){
+	slides[currentSlide].className = 'slide';
+	currentSlide = (currentSlide+1)%slides.length;
+	slides[currentSlide].className = 'slide showing';
+}
+</script>
