--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="width:100%;height:100%;">
+<html>
 <head>
   <title>UrineTrouble</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
@@ -8,26 +8,25 @@
 
 </head>
 
-<%= render 'layouts/header' %>
 
-
-<body style="	width:100%;height:100%;  ">
+<body> <!--style="	width:100%;height:100%;  "> -->
+  <%= render 'layouts/header' %>
 
     <!--<div class="holdme">-->
+    <!--
     <% if user_signed_in? %>
 
       <p>Hello, <%= current_user.name %> - <%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
-      <br>
 
     <% end %>
-
-
-
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  -->
 
       <%= yield %>
+
+
       <!--<img src="urinelucklogo.png" alt="urinelucklogo" height="500" width="500">-->
+      <div class="notice"><%= notice %></div>
+      <div class="alert"><%= alert %></div>
       <%= render 'layouts/footer' %>
 
     <!--</div>-->
