--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,24 +27,28 @@
     </div>
   </nav>
 -->
-  <ul class="myNav">
 
+<div class = "myNavElementsLeft"> <h1> <%= link_to 'UrineLuck', '#' %>  </h1> </div>
+  <ul class="myNav">
+        <!--
             <div class = "myNavElementsLeft"> <li> <%= link_to 'UrineLuck', '#' %>  </li>                  </div>
+        -->
+
+            <div class= "myNavElementsRight"> <li><%= link_to 'HOME', home_path %></li>                      </div>
+            <div class= "myNavElementsRight"> <li><%= link_to 'PROFILE', profile_path %></li>                </div>
+            <div class= "myNavElementsRight"> <li><%= link_to 'ADD BATHROOM', newbath_path %></li>         </div>
+            <div class= "myNavElementsRight"> <li><%= link_to 'MAP', showmap_path %></li>                    </div>
+            <div class= "myNavElementsRight"> <li><%= link_to "SETTINGS", edit_user_registration_path %></li></div>
 
             <% if !user_signed_in? %>
-            <div class= "myNavElementsRight"> <li><%= link_to 'Map', showmap_path %></li>                    </div>
-            <div class= "myNavElementsRight"> <li><%= link_to 'Sign Up', new_user_registration_path %></li>  </div>
-            <div class= "myNavElementsRight"> <li><%= link_to 'Log In', new_user_session_path%></li>         </div>
-            <% else %>
-            <div class= "myNavElementsRight"> <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li></div>
-            <div class= "myNavElementsRight"> <li><%= link_to "Settings", edit_user_registration_path %></li></div>
-            <div class= "myNavElementsRight"> <li><%= link_to 'Map', showmap_path %></li>                    </div>
-            <div class= "myNavElementsRight"> <li><%= link_to 'Add a Bathroom', newbath_path %></li>         </div>
-            <div class= "myNavElementsRight"> <li><%= link_to 'Profile', profile_path %></li>                </div>
-            <div class= "myNavElementsRight"> <li><%= link_to 'Home', home_path %></li>                      </div>
-              <% end %>
-  </ul>
+            <div class= "myNavElementsLeftRight"> <li><%= link_to 'Log In', new_user_session_path%></li>         </div>
 
+            <div class= "myNavElementsLeftRight"> <li><%= link_to 'Sign Up', new_user_registration_path %></li>  </div>
+            <% else %>
+            <div class= "myNavElementsLeftRight"><li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li></div>
+            <% end %>
+  </ul>
+<p> </p>
 <!--
 <p>
 <br>
