--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,6 +27,34 @@
     </div>
   </nav>
 -->
+<br>
+
+<ul class="TopRight">
+      <!--
+          <div class = "myNavElementsLeft"> <li> <%= link_to 'UrineLuck', '#' %>  </li>                  </div>
+      -->
+
+          <div class= "TopRightElementsSpecial"> <li><%= link_to 'CAREERS', newbath_path %></li>         </div>
+          <div class= "TopRightElements"> <li><%= link_to 'CONTACT US', profile_path %></li>                </div>
+          <div class= "TopRightElements"> <li><%= link_to 'INVESTOR', home_path %></li>                      </div>
+          <div class= "TopRightElements"> <li><%= link_to 'NEWS', showmap_path %></li>                    </div>
+
+</ul>
+
+
+<p>
+    <div class= "myLogoOne"> <%= link_to 'UrineLuck', '#' %> </div>
+    <div class= "myLogoTwo"> <%= link_to 'For The Bathroom Connoisseur', '#' %> </div>
+</p>
+
+
+<br>
+<p></p>
+
+
+
+
+
 
 <div class = "myNavElementsLeft"> <h1> <%= link_to 'UrineLuck', '#' %>  </h1> </div>
   <ul class="myNav">
