the stars work but not properly

--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -15,8 +15,8 @@
                             <td><b><%= bath.city %></b></td>
                         </tr>
                         <tr>
-                            <th><b>Rating</b></th>
-                            <td><b><%= bath.rating %></b></td>
+                            <th><b>Average Rating</b></th>
+                            <td><b><%= rating_for bath, "rating", imdb_avg: true %></b></td>
                         </tr>
                         
                         <tr>
