--- a/app/views/baths/new.html.erb
+++ b/app/views/baths/new.html.erb
@@ -9,12 +9,12 @@
     
     <div class="field">  
       <%= f.label :country, "Country" %>
-      <%= select_tag "country", options_for_select(countries_list) %>
+      <%= f.select "country", options_for_select(countries_list) %>
     </div>
     
     <div class="field">
         <%= f.label :province, "Province/State" %><br />
-        <%= select_tag "province", options_for_select(us_states) %>
+        <%= f.select "province", options_for_select(us_states) %>
     </div>
     
     <div class="field">
@@ -27,10 +27,6 @@
         <%= f.text_field :address, autofocus: true %>
     </div>
     
-    <!--<div class="field">-->
-    <!--    <%= f.label :hours %><br />-->
-    <!--    <%= f.time_field :hours, autofocus: true %>-->
-    <!--</div>-->
 
     <div class="field">
         <%= f.label :rating %><br />
