Cleaning Up Header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -50,7 +50,7 @@
 
 
 
-<div class = "myNavElementsLeft"> <h1> <%= link_to 'UrineLuck', '#' %>  </h1> </div>
+<div class = "Logo"> <h1> <%= link_to 'UrineLuck', '#' %>  </h1> </div>
   <ul class="myNav">
         <!--
             <div class = "myNavElementsLeft"> <li> <%= link_to 'UrineLuck', '#' %>  </li>                  </div>
