--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,11 @@
 /*
 .myNavBackground{
   background-color: #202020;
+  text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
+
 }
+
+
 */
 
 
@@ -31,7 +35,7 @@
 
 
 
-.myNavElementsLeft{
+.Logo{
   margin: 40px 0px 10px 0px;
   background-color: #FFFFFF;
   font-family: Impact;
@@ -43,13 +47,13 @@
   text-align: center;
 
 }
-.myNavElementsLeft a {
+.Logo a {
   color: #080808;
   text-shadow: -1px 0 #F8F8F8, 0 1px #F8F8F8, 1px 0 #F8F8F8, 0 -1px #F8F8F8;
   font-size: 125%;
   text-decoration: none;
 }
-.myNavElementsLeft a:hover:not(.active) {
+.Logo a:hover:not(.active) {
     color: #080808;
     text-shadow: -1px 0 #F8F8F8, 0 1px #F8F8F8, 1px 0 #F8F8F8, 0 -1px #F8F8F8;
     font-size: 125%;
@@ -61,59 +65,60 @@
 
 .myNavElementsLeftRight{
   float: right;
-  padding: 15px 15px 15px 15px;
   color: #202020;
-  text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
   background-color: #F8F8F8;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #FFFFFF;
-  border-bottom: solid #E8E8E8 ;
 }
 .myNavElementsLeftRight a {
+  padding: 15px 15px 15px 15px;
   display: block;
   color: #202020;
-  text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
   font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;    text-align: center;
   text-decoration: none;
   font-size: 15px;
   font-weight: 100;
   background-color: #F8F8F8;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #FFFFFF;
+  border-bottom: solid #E8E8E8 ;
+  padding: 15px 15px 15px 15px;
 }
 .myNavElementsLeftRight a:hover:not(.active) {
-  color: #808080;
-  text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
+  color: #202020;
   font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
   background-color: #F8F8F8;
+  border-top: solid #E8E8E8 ;
 }
+
+
 
 .myNavElementsRight{
   float: left;
-  padding: 15px 15px 15px 15px;
   color: #202020;
-  text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
+  background-color: #F8F8F8;
+}
+.myNavElementsRight a {
+  padding: 15px 15px 15px 15px;
+  display: block;
+  color: #202020;
+  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;    text-align: center;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 100;
   background-color: #F8F8F8;
   border-style: solid;
   border-width: 1px;
   border-color: #FFFFFF;
   border-bottom: solid #E8E8E8 ;
-}
-.myNavElementsRight a {
-    display: block;
-    color: #202020;
-    text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
-    font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;    text-align: center;
-    text-decoration: none;
-    font-size: 15px;
-    font-weight: 100;
-    background-color: #F8F8F8;
+  padding: 15px 15px 15px 15px;
 }
 .myNavElementsRight a:hover:not(.active) {
-    color: #808080;
-    text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
-    font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
-    background-color: #F8F8F8;
+  color: #202020;
+  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+  background-color: #F8F8F8;
+  border-top: solid #E8E8E8 ;
 }
+
 
 
 .myNav{
@@ -134,34 +139,33 @@
 
 .TopRightElements{
   float: right;
-  padding: 15px 15px 15px 15px;
   color: #202020;
-  text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #FFFFFF;
-  border-right: solid #686868 ;
-  background-color: #FFFFFF;
-  line-height: 5px;
-  font-weight: 100;
 }
 
 
 .TopRightElements a {
+    padding: 15px 15px 15px 15px;
     display: block;
     color: #202020;
-    text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
+    text-shadow: -1px 0 #FFFFFF, 0 1px #FFFFFF, 1px 0 #FFFFFF, 0 -1px #FFFFFF;
     font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;    text-align: center;
     text-decoration: none;
     font-size: 15px;
     font-weight: 100;
-    background-color: #F8F8F8;
+    background-color: #FFFFFF;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #FFFFFF;
+    border-right: solid #686868 ;
+    background-color: #FFFFFF;
+    line-height: 5px;
+    font-weight: 100;
 }
 .TopRightElements a:hover:not(.active) {
     color: #808080;
-    text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
+    text-shadow: -1px 0 #FFFFFF, 0 1px #FFFFFF, 1px 0 #FFFFFF, 0 -1px #FFFFFF;
     font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
-    background-color: #F8F8F8;
+    background-color: #FFFFFF;
 }
 
 
@@ -171,28 +175,26 @@
 
 .TopRightElementsSpecial{
   float: right;
-  padding: 15px 15px 15px 15px;
   color: #202020;
-  text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
-  line-height: 5px;
-  font-weight: 100;
-
 }
 
-
 .TopRightElementsSpecial a {
+    padding: 15px 15px 15px 15px;
     display: block;
     color: #202020;
-    text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
+    text-shadow: -1px 0 #FFFFFF, 0 1px #FFFFFF, 1px 0 #FFFFFF, 0 -1px #FFFFFF;
     font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;    text-align: center;
     text-decoration: none;
     font-size: 15px;
     font-weight: 100;
-    background-color: #F8F8F8;
+    background-color: #FFFFFF;
+    background-color: #FFFFFF;
+    line-height: 5px;
+    font-weight: 100;
 }
 .TopRightElementsSpecial a:hover:not(.active) {
     color: #808080;
-    text-shadow: -1px 0 #282828, 0 1px #282828, 1px 0 #282828, 0 -1px #282828;
+    text-shadow: -1px 0 #FFFFFF, 0 1px #FFFFFF, 1px 0 #FFFFFF, 0 -1px #FFFFFF;
     font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
-    background-color: #F8F8F8;
+    background-color: #FFFFFF;
 }
